--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
     <title>geo-ninjas</title>
   </head>
   <body>
