--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,6 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRkVdosp2cm2ll445qN-LbZIpev90qyMU&callback=initMap"></script>
     <title>geo-ninjas</title>
   </head>
   <body>
@@ -22,5 +21,10 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRkVdosp2cm2ll445qN-LbZIpev90qyMU&callback=initMap"
+      async
+      defer
+    ></script>
   </body>
 </html>
